name:                legal-gender-change
version:             0.1.0.0
synopsis:            A tool for staying organised when doing a legal gender change.
description:         A tool for staying organised when doing a legal gender change. Should provide suggestions for common tasks and help you keep track of what has been completed.
license:             GPL-3
license-file:        LICENSE
author:              Alexandra DeWit
maintainer:          alexa.dewit@gmail.com
copyright:           Alexandra DeWit (c) 2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  other-modules:       Types
                     , Schema
                     , Crypto
                     , Domain
                     , Queries
                     , Class
  build-depends:       base >=4.6 && < 5
                     , wai >= 3.0.0 && <3.3
                     , wai-extra >=3.0.0 && < 3.3
                     , wai-cors >= 0.2.6 && < 1.0
                     , warp >= 3.2.25 && < 3.3
                     , scotty
                     , clay
                     , configurator
                     , containers
                     , data-default >= 0.7.1.1 && < 1.0
                     , text
                     , time
                     , aeson
                     , transformers
                     , http-types
                     , lens
                     , protolude
                     , bytestring
                     , uuid-types
                     , text-short
                     , argon2 >= 1.3.0.1 && < 1.4
                     , entropy
                     , DRBG
                     , crypto-api
                     , transformers
                     , mtl
                     , stm
                     , uuid
                     , random
                     , jose-jwt
                     , hasql-migration >= 0.2.0 && < 0.3.0
                     , hasql >= 1.3.0.3 && < 1.4
                     , hasql-pool >= 0.5.0 && < 0.6
                     , hasql-transaction
                     , string-qq
                     , blaze-html
                     , scotty-cookie
  hs-source-dirs:      app
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , DeriveGeneric
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
                     , TypeApplications
                     , GADTs
                     , StandaloneDeriving
                     , TypeSynonymInstances
                     , MultiParamTypeClasses
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
                     , QuasiQuotes
                     , TemplateHaskell
  exposed-modules:     App
                     , Conf


executable app
  main-is:             Main.hs
  build-depends:       base >=4.6 && < 5
                     , protolude
                     , legal-gender-change
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -ddump-splices
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite test
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >=4.6 && < 5
                     , protolude
                     , legal-gender-change
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
 
source-repository head
   type: git
   location: https://github.com/AlexaDeWit/LegalGenderChangeTool
